# apps/api/src/ai-tasks/dto/word-match-rules.dto.ts
@@ -1,0 +1,17 @@
+import {
+  IsArray,
+  IsObject,
+  IsOptional,
+  IsString,
+} from 'class-validator';
+
+export class WordMatchRulesDto {
+  @IsOptional()
+  @IsArray()
+  @IsString({ each: true })
+  suffixes?: string[];
+
+  @IsOptional()
+  @IsObject()
+  irregulars?: Record<string, string[]>;
+}
